[tool.poetry]
name = "netcam-aiomeraki"
version = "0.1.0"
description = "Meraki Dashboard integration for netcad-netcam"
readme = "README.md"
authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
python = "^3.8"
meraki = "^1.15.0"
aiohttp = "<4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]
